# SFML-calculator

./: CMakeLists.txt  README.md  main.cpp
